--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <navbar>
    
   
-        <a href="file:///C:/Users/Maria%20C%20D/Desktop/OnelifeOnebody/index.html"><li>HOME</li></a>
+        <a href="https://onebodyonelife.info/"><li>HOME</li></a>
         <a href="about.html"><li>ABOUT</li></a>
         <a href="contact.html"><li>CONTACT</li></a>
      
